// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Podcast Promo Card Content should match snapshot 1`] = `
.emotion-0 {
  padding-bottom: 0.5rem;
}

<div>
  <div
    class="emotion-0 emotion-1"
  >
    Content
  </div>
</div>
`;

exports[`Podcast Promo Card Description should match snapshot 1`] = `
.emotion-0 {
  font-size: 0.9375rem;
  line-height: 1.125rem;
  font-family: ReithSans,Helvetica,Arial,sans-serif;
  font-weight: 400;
  font-style: normal;
  margin: 0.5rem;
  height: auto;
  line-height: 1.2;
  color: #6E6E73;
  overflow-wrap: break-word;
}

@media (min-width: 20rem) and (max-width: 37.4375rem) {
  .emotion-0 {
    font-size: 0.9375rem;
    line-height: 1.125rem;
  }
}

@media (min-width: 37.5rem) {
  .emotion-0 {
    font-size: 0.875rem;
    line-height: 1.125rem;
  }
}

@media (min-width: 15rem) {
  .emotion-0 {
    width: 5rem;
  }
}

@media (min-width: calc(15rem + 1.25rem)) {
  .emotion-0 {
    width: 5.56rem;
    margin: 0.5rem 10px;
  }
}

@media (min-width: 20rem) {
  .emotion-0 {
    width: 7.18rem;
    margin: 0.5rem 10px;
  }
}

@media (min-width: calc(20rem + 2.5rem)) {
  .emotion-0 {
    width: 9.06rem;
    margin: 0.5rem 10px;
  }
}

@media (min-width: 37.5rem) {
  .emotion-0 {
    width: 14.68rem;
    margin: 0.5rem 10px;
  }
}

<div>
  <p
    class="emotion-0 emotion-1"
  >
    Content
  </p>
</div>
`;

exports[`Podcast Promo Card Episodes Text should match snapshot 1`] = `
.emotion-0 {
  display: inline;
  font-size: 0.9375rem;
  line-height: 1.25rem;
  font-family: ReithSans,Helvetica,Arial,sans-serif;
  font-weight: 400;
  font-style: normal;
  color: #6E6E73;
}

@media (min-width: 20rem) and (max-width: 37.4375rem) {
  .emotion-0 {
    font-size: 1rem;
    line-height: 1.25rem;
  }
}

@media (min-width: 37.5rem) {
  .emotion-0 {
    font-size: 1rem;
    line-height: 1.25rem;
  }
}

.emotion-0>svg {
  fill: currentColor;
  color: unset;
  width: 1rem;
  height: 1rem;
  position: relative;
  bottom: 0.125rem;
  right: 0.1875rem;
}

@media (max-width: 14.9375rem) {
  .emotion-0 {
    margin: 0 0.75rem;
  }
}

@media (min-width: 15rem) {
  .emotion-0 {
    margin: 0 0.5rem;
  }
}

@media (min-width: calc(15rem + 1.25rem)) {
  .emotion-0 {
    margin: 0 0.5rem;
  }
}

@media (min-width: 20rem) {
  .emotion-0 {
    margin: 0 0.75rem;
  }
}

@media (min-width: calc(20rem + 2.5rem)) {
  .emotion-0 {
    margin: 0 0.5rem;
  }
}

@media (min-width: 37.5rem) {
  .emotion-0 {
    margin: 0 0.75rem;
  }
}

.emotion-2 {
  vertical-align: middle;
  margin: 0 0.25rem;
  color: #222222;
  fill: currentColor;
  width: 1rem;
  height: 1rem;
}

<div>
  <p
    class="emotion-0 emotion-1"
    dir="ltr"
  >
    <svg
      aria-hidden="true"
      class="emotion-2 emotion-3"
      focusable="false"
      height="32"
      viewBox="0 0 32 32"
      width="32"
    >
      <polygon
        points="4 6 11.1 6 26 6 26 28 28 28 28 4 4 4 4 6"
      />
      <polygon
        points="8 0 8 2 30 2 30 24 32 24 32 0 8 0"
      />
      <path
        d="M0,32H24V8H0ZM4,12H20V28H4Z"
      />
    </svg>
    Episodes
  </p>
</div>
`;

exports[`Podcast Promo Card Image should match snapshot 1`] = `
.emotion-0 {
  display: inline-block;
  margin: 0.5rem;
}

@media (max-width: 14.9375rem) {
  .emotion-0 {
    display: none;
  }
}

@media (min-width: 15rem) {
  .emotion-0 {
    width: 5.12rem;
    height: 5rem;
  }
}

@media (min-width: calc(15rem + 1.25rem)) {
  .emotion-0 {
    width: 5.62rem;
    height: 5.56rem;
  }
}

@media (min-width: 20rem) {
  .emotion-0 {
    width: 7.25rem;
    height: 7.12rem;
  }
}

@media (min-width: calc(20rem + 2.5rem)) {
  .emotion-0 {
    width: 8.93rem;
    height: 8.81rem;
  }
}

@media (min-width: 37.5rem) {
  .emotion-0 {
    width: 15.18rem;
    height: 14.93rem;
  }
}

<div>
  <div
    class="emotion-0 emotion-1"
  >
    Content
  </div>
</div>
`;

exports[`Podcast Promo Card Link should match snapshot 1`] = `
.emotion-0 {
  font-size: 0.9375rem;
  line-height: 1.25rem;
  display: block;
  line-height: 1.33;
  color: #222222;
  margin: 0 0.5rem;
  -webkit-text-decoration: none;
  text-decoration: none;
}

@media (min-width: 20rem) and (max-width: 37.4375rem) {
  .emotion-0 {
    font-size: 1rem;
    line-height: 1.25rem;
  }
}

@media (min-width: 37.5rem) {
  .emotion-0 {
    font-size: 1rem;
    line-height: 1.25rem;
  }
}

.emotion-0:before {
  position: absolute;
  top: 0;
  bottom: 0;
  left: 0;
  right: 0;
  content: '';
  overflow: hidden;
  z-index: 1;
}

@media (min-width: 15rem) {
  .emotion-0 {
    margin: 0 0.5rem;
  }
}

@media (min-width: calc(15rem + 1.25rem)) {
  .emotion-0 {
    margin: 0 10px;
  }
}

@media (min-width: 20rem) {
  .emotion-0 {
    margin: 0 10px;
  }
}

@media (min-width: calc(20rem + 2.5rem)) {
  .emotion-0 {
    margin: 0 10px;
  }
}

@media (min-width: 37.5rem) {
  .emotion-0 {
    margin: 0 10px;
  }
}

.emotion-0:visited .podcast-promo--visited {
  color: #6E6E73;
}

.emotion-0:focus .podcast-promo--focus {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

<div>
  <a
    class="emotion-0 emotion-1"
    href="https://www.bbc.com"
  >
    Content
  </a>
</div>
`;

exports[`Podcast Promo Card should match snapshot 1`] = `
.emotion-0 {
  position: relative;
  height: auto;
  margin: 1rem 0 0 0;
  box-shadow: 0 0 5px 5px rgba(34, 34, 34, 0.03);
  background-color: #FDFDFD;
}

@media (max-width: 14.9375rem) {
  .emotion-0 {
    width: calc(100 - 7) %;
    padding: 0.5rem 0;
  }
}

@media (min-width: 15rem) {
  .emotion-0 {
    width: 6.06rem;
  }
}

@media (min-width: calc(15rem + 1.25rem)) {
  .emotion-0 {
    width: 6.56rem;
  }
}

@media (min-width: 20rem) {
  .emotion-0 {
    width: 8.25rem;
  }
}

@media (min-width: calc(20rem + 2.5rem)) {
  .emotion-0 {
    width: 9.93rem;
  }
}

@media (min-width: 37.5rem) {
  .emotion-0 {
    width: 16.12rem;
  }
}

.emotion-0:hover .podcast-promo--hover {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

<div>
  <div
    class="emotion-0 emotion-1"
  >
    Content
  </div>
</div>
`;

exports[`Podcast Promo Title should match snapshot 1`] = `
.emotion-0 {
  font-size: 1.125rem;
  line-height: 1.375rem;
  font-family: ReithSans,Helvetica,Arial,sans-serif;
  font-weight: 400;
  font-style: normal;
  display: block;
  color: #222222;
}

@media (min-width: 20rem) and (max-width: 37.4375rem) {
  .emotion-0 {
    font-size: 1.125rem;
    line-height: 1.375rem;
  }
}

@media (min-width: 37.5rem) {
  .emotion-0 {
    font-size: 1.25rem;
    line-height: 1.5rem;
  }
}

.emotion-0>svg {
  margin-left: 0;
  width: 1.375rem;
  height: 1.375rem;
  fill: currentColor;
  position: relative;
  bottom: 0.3125rem;
  right: 0.1875rem;
}

.emotion-2 {
  vertical-align: middle;
  margin: 0 0.25rem;
  color: #222222;
  fill: currentColor;
  width: 1rem;
  height: 1rem;
}

<div>
  <strong
    class="emotion-0 emotion-1"
    dir="ltr"
  >
    <svg
      aria-hidden="true"
      class="emotion-2 emotion-3"
      focusable="false"
      height="32"
      viewBox="0 0 32 32"
      width="32"
    >
      <path
        d="M18.7,31h-5.3l-2.3-10.4C12.3,19.5,14,19,16,19s3.7,0.5,4.9,1.7L18.7,31z M22,8.2c-1.7-1.7-3.9-2.5-6.1-2.5s-4.4,0.9-6,2.5 l1.7,1.7c1.2-1.2,2.7-1.8,4.3-1.8s3.1,0.6,4.3,1.8L22,8.2z M25.5,4.9c-2.6-2.7-6.1-4-9.5-4S9.1,2.3,6.5,4.9l1.7,1.7 c2.1-2.1,4.9-3.2,7.7-3.2c2.8,0,5.6,1.1,7.8,3.2L25.5,4.9z M12.4,14c0,2,1.5,3.6,3.6,3.6c2,0,3.6-1.5,3.6-3.6 c0-2.1-1.5-3.6-3.6-3.6C13.9,10.4,12.4,11.9,12.4,14z"
      />
    </svg>
    Content
  </strong>
</div>
`;
